--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kejian",
+  "name": "xwywlw",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,15 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "0.0.7",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dayjs": "^1.10.4",
     "element-ui": "^2.12.0",
+    "js-cookie": "^2.2.1",
+    "v-fit-columns": "^0.2.0",
     "video.js": "^7.6.0",
     "vue": "^2.6.10",
+    "vue-amap": "^0.5.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-i18n": "^8.22.2",
+    "vue-image-scroll": "^1.0.2",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.3.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.3",
-    "vue-video-player": "^5.0.2"
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.6.0",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -51,5 +62,14 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "description": "> 星望月物联网科技有限公司企业官网 前端",
+  "main": "babel.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git@gitee.com:yuxianshengs/shanghaijianshe.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
