--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "vue-image-scroll": "^1.0.2",
     "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.3.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.3",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.6.0",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "quill": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
